# proyecto-de-ia

./: .env  .env.example  .gitignore  README.md  SmartLight-Back-CUDA.Dockerfile  SmartLight-Back.Dockerfile  SmartLight-Front.Dockerfile  conda-env.yml  docker-compose.yml  pyproject.toml  requirements.txt  server.py
SmartLight-Back/: README.md  pyproject.toml  smartlight.db
SmartLight-Back/app/: camera.py  config.py  database.py  helpers.py  main.py  schemas.py  semaphore.py  video.py
SmartLight-Back/app/routers/: camaras.py  grupos.py
SmartLight-Front/: README.md  pyproject.toml
SmartLight-Front/app/: api_client.py  config.py  main.py
SmartLight-Front/app/routers/: admin.py  monitor.py
SmartLight-Front/app/static/styles/: admin.css  style.css
SmartLight-Front/app/templates/: index.html
SmartLight-Front/app/templates/admin/: _pasos.html  _sidebar.html  corredor.html  form.html  grupo_detalle.html  grupos.html  lista.html  mapa.html  zonas.html
backend/: __init__.py  application.wsgi  config.py  helpers.py  semaforo.py  video_procesor.py
containers/: smartlight-back-cuda.build  smartlight-back-cuda.container  smartlight-back.build  smartlight-back.container  smartlight-front.build  smartlight-front.container
frontend/: __init__.py  application.wsgi
frontend/static/styles/: style.css
frontend/templates/: index.html
model-ai/: index.html  requirements.txt  server.py
services/: pi-back.service  pi-front.service
systemd/: smartlight-back.service  smartlight-front.service
