[project]
name = "proyecto-de-ia"
version = "0.1.0"
description = "Miau"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "dotenv>=0.9.9",
    "flask>=3.1.3",
    "flask-socketio>=5.6.1",
    "mod-wsgi-standalone>=5.0.2",
    "opencv-python>=4.13.0.92",
    "pathlib>=1.0.1",
    "requests>=2.34.2",
    "torch>=2.12.0",
    "torchvision>=0.27.0",
    "ultralytics>=8.4.54",
    "websockets>=16.0",
]
