[project]
name = "smartlight-back"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.136.3",
    "lap>=0.5.12",
    "opencv-python>=4.13.0.92",
    "python-dotenv>=1.2.2",
    "python-multipart>=0.0.20",
    "python-socketio>=5.16.2",
    "sqlalchemy>=2.0.36",
    "uvicorn>=0.49.0",
    "torch",
    "torchvision",
    "ultralytics"
]
[[tool.uv.index]]
name = "cpu"
url = "https://download.pytorch.org/whl/cpu"
explicit = true

[tool.uv]
[[tool.uv.index]]
name = "cuda"
url = "https://download.pytorch.org/whl/cu130"
explicit = true
