[project]
name = "smartlight-back"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.136.3",
    "httpx>=0.28.0",
    "jinja2>=3.1.6",
    "python-dotenv>=1.2.2",
    "python-multipart>=0.0.20",
    "uvicorn>=0.49.0",
]
[[tool.uv.index]]
name = "cpu"
url = "https://download.pytorch.org/whl/cpu"
explicit = true

[tool.uv]
[[tool.uv.index]]
name = "cuda"
url = "https://download.pytorch.org/whl/cu130"
explicit = true
